<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class () extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('plan_images', function (Blueprint $table) {
            $table->id();
            $table->foreignId('accommodation_plan_id')->constrained()->cascadeOnDelete();
            $table->string('name');
            $table->string('image_path');
            $table->timestamp('created_at')->useCurrent();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('plan_images');
    }
};
